# Ewald

./: .gitignore  CMakeLists.txt  README.md  run
include/: KSpace.h  RSpace.h  UnitCell.h  VotcaDefs.h
src/: KSpace.cpp  RSpace.cpp  main.cpp
